[package]
name = "goban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
handlebars = "4.2.2"
indexmap = "1.8.1"
serde_json = "1.0.81"
